--- a/pages/component/order_confirm/order_confirm.wxml
+++ b/pages/component/order_confirm/order_confirm.wxml
@@ -3,7 +3,7 @@
   <template wx:if="{{config.customer_service===1}}" is="contact" data="{{config}}"/>
   <view class="orders-list confirm-box border_bottom2">
       <!--<view class="orders-number color2 border_bottom">订单编号：{{oid}}</view>-->
-      <navigator wx:for="{{carts}}" url="../details/details?id={{item.cid||item.id}}" class="orders-detail border_bottom">
+      <navigator wx:for="{{selectCarts}}" url="../details/details?id={{item.cid||item.id}}" class="orders-detail border_bottom">
           <image src="{{item.image||item.product_thumb}}"></image>
           <view class="">{{item.title||item.product_name}}</view>
           <view class="">{{item.num||item.amount}}</view>
