--- a/pages/component/order_detail/order_detail.wxml
+++ b/pages/component/order_detail/order_detail.wxml
@@ -26,13 +26,18 @@
     <view class="delivery-top border_bottom" wx:if="{{dis_title.key &&dis_title.key!='0'&&dis_title.key!='1'}}">
       <text class="fl">配送地址</text>
     </view> 
-    <view class="delivery-middle" wx:if="{{dis_title.key && dis_title.key!='0'&&dis_title.key!='1'}}" >
+    <view class="delivery-middle" wx:if="{{dis_title.key && dis_title.key!='0'}}" >
       <view class="delivery_addr-no-content">
         <view class="delivery_addr-no-list">
             <image src="../../../image/local.jpg" style="width:50px; height:50px;"></image>
+            <view wx:if="{{dis_title.key==1}}">
+            <view class="addr_detail small_font">自提地址：<view wx:for="{{pickupaddrs}}" wx:key="index">{{item.address}}</view></view>
+            </view>
+            <view wx:else>
             <view class="addr_name normal_font">收货人：<text class="color">{{address.name}}</text></view>
             <view class="addr_phone medium_font">电话：{{address.phone}}</view>
             <view class="addr_detail small_font">地址：{{address.detail}}</view>
+            </view>
         </view>
       </view>
     </view>
