--- a/pages/component/details/details.wxml
+++ b/pages/component/details/details.wxml
@@ -227,7 +227,7 @@
           <!-- 可选无class
           选中class为active
           不可选class为disable -->
-          <scroll-view scroll-y style="height: 250px;">
+          <scroll-view scroll-y style="max-height: 250px;">
              <view class="detail-cart-property">
               <view class="property-list border_bottom" wx:for="{{propertys}}" wx:for-index="id">
                 
