--- a/pages/component/index.wxml
+++ b/pages/component/index.wxml
@@ -3,7 +3,7 @@
 <import src="../common/contact.wxml" />
 <view class="main">
   <template is="nav" data="{{config}}" />
-  <template wx:if="{{config.customer_service===1}}" is="contact" data="{{config}}"/>
+  <template wx:if="{{config.customer_service==='1'}}" is="contact" data="{{config}}"/>
   <view class="index-top">
     <swiper indicator-dots="true" autoplay="true" interval="{{interval}}" duration="{{duration}}" circular="true">
       <block wx:for="{{imgUrls}}" wx:key="{{index}}">
